src/test/deca/avecObjet/valid/assign.deca
// Description :
//    Déclaration puis affectation simple d'une variable entière.
//
// Resultats :
//    ok

{
    int a;
    a = 5;
}