src/test/deca/avecObjet/invalid/convBoolFloat.deca
// Description :
//    Conversion invalide : tentative d'assigner une valeur de type boolean à une variable de type float.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Type incompatible : attendu float, trouvé boolean

{
   float a = true ;
}
